Use digits a bit more

--- a/tex/p064.tex
+++ b/tex/p064.tex
@@ -29,20 +29,20 @@
 \vs p064 4:1 The Neanderthalers were excellent fighters, and they travelled extensively. They gradually spread from the highland centres in north\hyp{}west India to France on the west, China on the east, and even down into northern Africa. They dominated the world for almost 500,000 years until the times of the migration of the evolutionary races of colour.
 \vs p064 4:2 \pc \bibemph{800,000} years ago game was abundant; many species of deer, as well as elephants and hippopotamuses, roamed over Europe. Cattle were plentiful; horses and wolves were everywhere. The Neanderthalers were great hunters, and the tribes in France were the first to adopt the practice of giving the most successful hunters the choice of women for wives.
 \vs p064 4:3 The reindeer was highly useful to these Neanderthal peoples, serving as food, clothing, and for tools, since they made various uses of the horns and bones. They had little culture, but they greatly improved the work in flint until it almost reached the levels of the days of Andon. Large flints attached to wooden handles came back into use and served as axes and picks.
-\vs p064 4:4 \pc \bibemph{750,000} years ago the fourth ice sheet was well on its way south. With their improved implements the Neanderthalers made holes in the ice covering the northern rivers and thus were able to spear the fish which came up to these vents. Ever these tribes retreated before the advancing ice, which at this time made its most extensive invasion of Europe.
+\vs p064 4:4 \pc \bibemph{750,000} years ago the 4\ts{th} ice sheet was well on its way south. With their improved implements the Neanderthalers made holes in the ice covering the northern rivers and thus were able to spear the fish which came up to these vents. Ever these tribes retreated before the advancing ice, which at this time made its most extensive invasion of Europe.
 \vs p064 4:5 In these times the Siberian glacier was making its southernmost march, compelling early man to move southward, back toward the lands of his origin. But the human species had so differentiated that the danger of further mingling with its nonprogressive simian relatives was greatly lessened.
-\vs p064 4:6 \pc \bibemph{700,000} years ago the fourth glacier, the greatest of all in Europe, was in recession; men and animals were returning north. The climate was cool and moist, and primitive man again thrived in Europe and western Asia. Gradually the forests spread north over land which had been so recently covered by the glacier.
+\vs p064 4:6 \pc \bibemph{700,000} years ago the 4\ts{th} glacier, the greatest of all in Europe, was in recession; men and animals were returning north. The climate was cool and moist, and primitive man again thrived in Europe and western Asia. Gradually the forests spread north over land which had been so recently covered by the glacier.
 \vs p064 4:7 Mammalian life had been little changed by the great glacier. These animals persisted in that narrow belt of land lying between the ice and the Alps and, upon the retreat of the glacier, again rapidly spread out over all Europe. There arrived from Africa, over the Sicilian land bridge, straight\hyp{}tusked elephants, broad\hyp{}nosed rhinoceroses, hyenas, and African lions, and these new animals virtually exterminated the sabre\hyp{}toothed tigers and the hippopotamuses.
 \vs p064 4:8 \pc \bibemph{650,000} years ago witnessed the continuation of the mild climate. By the middle of the interglacial period it had become so warm that the Alps were almost denuded of ice and snow.
 \vs p064 4:9 \pc \bibemph{600,000} years ago the ice had reached its then northernmost point of retreat and, after a pause of a few thousand years, started south again on its fifth excursion. But there was little modification of climate for 50,000 years. Man and the animals of Europe were little changed. The slight aridity of the former period lessened, and the alpine glaciers descended far down the river valleys.
 \vs p064 4:10 \pc \bibemph{550,000} years ago the advancing glacier again pushed man and the animals south. But this time man had plenty of room in the wide belt of land stretching north\hyp{}east into Asia and lying between the ice sheet and the then greatly expanded Black Sea extension of the Mediterranean.
-\vs p064 4:11 These times of the fourth and fifth glaciers witnessed the further spread of the crude culture of the Neanderthal races. But there was so little progress that it truly appeared as though the attempt to produce a new and modified type of intelligent life on Urantia was about to fail. For almost 250,000 years these primitive peoples drifted on, hunting and fighting, by spells improving in certain directions, but, on the whole, steadily retrogressing as compared with their superior Andonic ancestors.
+\vs p064 4:11 These times of the 4\ts{th} and 5\ts{th} glaciers witnessed the further spread of the crude culture of the Neanderthal races. But there was so little progress that it truly appeared as though the attempt to produce a new and modified type of intelligent life on Urantia was about to fail. For almost 250,000 years these primitive peoples drifted on, hunting and fighting, by spells improving in certain directions, but, on the whole, steadily retrogressing as compared with their superior Andonic ancestors.
 \vs p064 4:12 \pc During these spiritually dark ages the culture of superstitious mankind reached its lowest levels. The Neanderthalers really had no religion beyond a shameful superstition. They were deathly afraid of clouds, more especially of mists and fogs. A primitive religion of the fear of natural forces gradually developed, while animal worship declined as improvement in tools, with abundance of game, enabled these people to live with lessened anxiety about food; the sex rewards of the chase tended greatly to improve hunting skill. This new religion of fear led to attempts to placate the invisible forces behind these natural elements and culminated, later on, in the sacrificing of humans to appease these invisible and unknown physical forces. And this terrible practice of human sacrifice has been perpetuated by the more backward peoples of Urantia right on down to the XX century.
 \vs p064 4:13 These early Neanderthalers could hardly be called sun worshippers. They rather lived in fear of the dark; they had a mortal dread of nightfall. As long as the moon shone a little, they managed to get along, but in the dark of the moon they grew panicky and began the sacrifice of their best specimens of manhood and womanhood in an effort to induce the moon again to shine. The sun, they early learned, would regularly return, but the moon they conjectured only returned because they sacrificed their fellow tribesmen. As the race advanced, the object and purpose of sacrifice progressively changed, but the offering of human sacrifice as a part of religious ceremonial long persisted.
 \usection{5.\bibnobreakspace Origin of the Coloured Races}
 \vs p064 5:1 \bibemph{500,000} years ago the Badonan tribes of the north\hyp{}western highlands of India became involved in another great racial struggle. For more than 100 years this relentless warfare raged, and when the long fight was finished, only about 100 families were left. But these survivors were the most intelligent and desirable of all the then living descendants of Andon and Fonta.
 \vs p064 5:2 And now, among these highland Badonites there was a new and strange occurrence. A man and woman living in the north\hyp{}eastern part of the then inhabited highland region began \bibemph{suddenly} to produce a family of unusually intelligent children. This was the \bibemph{Sangik family,} the ancestors of all of the 6 coloured races of Urantia.
-\vs p064 5:3 These Sangik children, 19 in number, were not only intelligent above their fellows, but their skins manifested a unique tendency to turn various colours upon exposure to sunlight. Among these 19 children were five red, two orange, four yellow, two green, four blue, and two indigo. These colours became more pronounced as the children grew older, and when these youths later mated with their fellow tribesmen, all of their offspring tended toward the skin colour of the Sangik parent.
+\vs p064 5:3 These Sangik children, 19 in number, were not only intelligent above their fellows, but their skins manifested a unique tendency to turn various colours upon exposure to sunlight. Among these 19 children were 5 red, 2 orange, 4 yellow, 2 green, 4 blue, and 2 indigo. These colours became more pronounced as the children grew older, and when these youths later mated with their fellow tribesmen, all of their offspring tended toward the skin colour of the Sangik parent.
 \vs p064 5:4 And now I interrupt the chronological narrative, after calling attention to the arrival of the Planetary Prince at about this time, while we separately consider the 6 Sangik races of Urantia.
 \usection{6.\bibnobreakspace The Six Sangik Races of Urantia}
 \vs p064 6:1 On an average evolutionary planet the 6 evolutionary races of colour appear one by one; the red man is the first to evolve, and for ages he roams the world before the succeeding coloured races make their appearance. The simultaneous emergence of all 6 races on Urantia, \bibemph{and in one family,} was most unusual.
