Add support for Baskerville and Caslon typefaces

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -18,7 +18,7 @@ INTRODUCTION
 \tunemarkup{pgafour}{\fontsize{15}{17}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13}{15}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{12}{15}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{15}{18}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{13}{17}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16}{19.5}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
@@ -64,9 +64,9 @@ To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper 
 Clicking on the Paper's title in the quiz section will return you back to that Paper in the text section.
 }
 
-\begin{flushleft}
-\itshape
-\hspace*{6pt}Tigran Aivazian\\
-\hspace*{6pt}London, England\\
-\hspace*{6pt}13\ts{th} July 2011.\\
-\end{flushleft}
+\begin{center}
+\authorfont\fontsize{17}{24}\selectfont
+Tigran Aivazian\\
+London, England\\
+13\ts{th} July 2011.\\
+\end{center}
