--- a/tex/title.tex
+++ b/tex/title.tex
@@ -32,17 +32,17 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgnexus10}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{12}{20}\selectfont}
-{\itshape OF}\\
+OF\\
 \tunemarkup{pgcrownq}{\fontsize{30}{38}\selectfont}
 \tunemarkup{pgafour}{\fontsize{32.5}{38}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{18}{20}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{20}{23}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{20}{22}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{16.6}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{20}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{18}{20}\selectfont}
-{\itshape\urantiapapers}\\
+\urantiapapers\\
 }%
 {%
 \vspace*{\stretch{0.1}}
@@ -52,7 +52,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgafour}{\fontsize{21}{24}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{10}{12}\selectfont}
-\tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
+\tunemarkup{pgkoboaurahd}{\fontsize{13}{17}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{13}{15}\selectfont}
 \itshape
 The Revised Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
@@ -83,7 +83,7 @@ Edited by Tigran Aivazian\\[2ex]
 
 \begin{center}
 \vspace*{\stretch{0.3}}
-\begin{center}\shadowbox{\strut\parbox{7cm}{\large\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\LARGE}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
+\begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\LARGE}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
@@ -97,9 +97,9 @@ The present text of \bibemph{The Revised Urantia Papers} is also hereby placed i
 \tunemarkuptwo{coverimage}{Cover design by Gary Tonge.\\}{}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
-Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
+Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
 		The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note.\\[5pt]}
-\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
+\small\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
 \upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pgnexus10}{10in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
 \upshape\bfseries PDF date: \mytoday{}\\
