--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -8,7 +8,7 @@
 \makeatother
 
 \begin{center}
-\Large\tunemarkup{pgafour}{\LARGE}\tunemarkup{pgauraone}{\LARGE}\bfseries
+\headingfont\Large\tunemarkup{pgafour}{\LARGE}\tunemarkup{pgauraone}{\LARGE}\bfseries
 INTRODUCTION
 \end{center}
 
@@ -46,7 +46,7 @@ Well, those ``few short years'' have come to pass and it now devolves upon us --
 expand and fearlessly continue the living stream of the Fifth Epochal Revelation.
 And to all those fearful and unbelieving who would speedily accuse me of blasphemy I say with my Lord and my Master:
 ``My Father worketh hitherto, and I work'' (John~5:17).
-Nevertheless, I and a team of others have carefully preserved the original First Edition (1955) of \bibemph{The Urantia Book}
+Nevertheless, I and a group of others have carefully preserved the original First Edition (1955) of \bibemph{The Urantia Book}
 and made it available on my website in both electronic and printed forms:
 
 \begin{center}
@@ -65,7 +65,7 @@ Clicking on the Paper's title in the quiz section will return you back to that P
 }
 
 \begin{center}
-\authorfont\fontsize{17}{24}\selectfont
+\authorfont\fontsize{20}{24}\selectfont
 Tigran Aivazian\\
 London, England\\
 13\ts{th} July 2011.\\
