--- a/tex/title.tex
+++ b/tex/title.tex
@@ -97,7 +97,7 @@ The present text of \bibemph{The Revised Urantia Papers} is also hereby placed i
 \tunemarkuptwo{coverimage}{Cover design by Gary Tonge.\\}{}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
-Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
+Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries tigran@quantuminfodynamics.com\makeatother}\\[1ex]
 		The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note.\\[5pt]}
 \small\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
